--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     {% block header_extends %}{% endblock %}
 </head>
 <body>
-
+    <!--导航栏-->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -31,6 +31,9 @@
                     </li>
                     <li class="{% block nav_blog_active %}{% endblock %}">
                         <a href="{% url 'blog_list' %}">博客</a>
+                    </li>
+                    <li class="{% block timeline %}{% endblock %}">
+                        <a href="{% url 'blog_timeline' %}">时间轴</a>
                     </li>
                 </ul>
                 <!--导航栏右侧-->
@@ -68,9 +71,9 @@
             </div>
         </div>
     </div>
-
+    
     {% block content %}{% endblock %}
-
+    
     <!-- Modal -->
     <div class="modal fade" id="login_modal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
@@ -98,6 +101,7 @@
             </div>
         </div>
     </div>
+    <!--JS点击-->
     <script type="text/javascript">
         $("#login_medal_form").submit(function(event){
             event.preventDefault();
@@ -116,6 +120,36 @@
             });
         });
     </script>
+
+<!--footer-->
+<div class="page-bottom">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 hidden-xs">
+                <div class="content">
+                    <h4 class="title">关于本站</h4>
+                    <p>基于Django+Bootstrap开发</p>
+                    
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="content">
+                    <h4 class="title">建议反馈</h4>
+                    <p>可在博文内容下发表评论</p>
+                </div>
+            </div>
+            <div class="col-sm-4 hidden-xs">
+                <div class="content">
+                    <h4 class="title">友情链接</h4>
+                    
+                </div>
+            </div>
+        </div>  
+    </div>
+    <div class="copyright">
+        <span>Welcome to visit my website © Admin</span>
+    </div>
+</div>
 
     {% block script_extends %}{% endblock %}
 </body>
