--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -7,13 +7,14 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-4 col-xs-offset-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4">
                 {% if not user.is_authenticated %}
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">注册</h3>
                         </div>
                         <div class="panel-body">
+                                <img class="img-circle profile-img" src="/static/res/img/avatar.png" alt="">
                             <form action="" method="POST">
                                 {% csrf_token %}
                                 {% for field in reg_form %}
