--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -23,10 +23,19 @@
                 <div class="panel-heading">{% block blog_list_title %}博客列表 {% endblock %}</div>
                 <div class="panel-body">
                     {% for blog in blogs %}
-                        <div class="blog">
+                        <div class="row blog-row">
+                            <div class="col-sm-3">
+                                <a class="thumbnail">
+                                    {# <img src="/media/{{ blog.blog_cover }} " alt=""> #}
+                                    <img src="{{ blog.blog_cover.url }}" alt="">
+                                </a>
+
+                            </div>
+                            <div class="col-sm-9">
+                                <div class="blog">
                             <h3><a href="{% url 'blog_detail' blog.pk %}">{{ blog.title }}</a></h3>
                             <p class="blog-info">
-                                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> <a href="{% url 
+                                <span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span> <a href="{% url
                                     'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a>&nbsp;&nbsp;
                                 <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
                                 {{ blog.created_time | date:"Y-m-d" }}&nbsp;&nbsp;
@@ -35,7 +44,17 @@
                                 点赞({%  get_like_count blog  %})
                             </p>
                             <p>{{ blog.content| striptags |truncatechars:120 | safe }}</p>
+                            <p>
+                                {% for tag in blog.blog_tag.all %}
+                                    <span class="glyphicon glyphicon-tag">{{ tag.tag_name }}</span>&nbsp;&nbsp;
+                                {% empty %}
+                                    <span>暂无标签</span>
+                                {% endfor %}
+                            </p>
                         </div>
+                            </div>
+                        </div>
+                        
                     {% empty %}
                         <div class="blog">
                             <h3>-- 暂无博客，敬请期待 --</h3>
