--- a/blog/templates/blog/timeline.html
+++ b/blog/templates/blog/timeline.html
@@ -9,34 +9,28 @@
 
 {% block header_extends %}
     <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/timeline.css' %}">
 {% endblock %}
 
 
 {# 页面内容 #}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-            {% for blog in blogs %}
-                <ul class="timeline">
-                    <li>
-                        <div class="time">{{ blog.created_time | date:"Y-m-d" }}</div>
-                        <div class="version">{{ blog.blog_type }}</div>
-                        <div class="number">第N篇文档</div>
-                        <div class="content">
-                            <pre>
-                                    {{ blog.title }}
-                            </pre>
-                        </div>
-                    </li>
-                </ul>
-            {% empty %}
-                <h3>-- 暂无博客，敬请期待 --</h3>
-            {% endfor %}
-        </div>
-    </div>
-    
-</div>
+{% for blog in blogs %}
+    <ul class="timeline">
+        <li>
+            <div class="time">{{ blog.created_time | date:"Y-m-d" }}</div>
+            <div class="version">{{ blog.blog_type }}</div>
+            <div class="number">第N篇文档</div>
+            <div class="content">
+                <pre>
+                        {{ blog.title }}
+                </pre>
+            </div>
+        </li>
+    </ul>
+{% empty %}
+    <h3>-- 暂无博客，敬请期待 --</h3>
+{% endfor %}
 
 
 {% endblock %}
