--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
                     {% else %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                                <img src="{{ user.get_userimg.url }}" alt="35x35" class="img-circle img-user" >
                                 {% if user.has_nickname %}
                                     {{ user.username }}({{ user.get_nickname }})
                                 {% else %}
