--- a/user/templates/user/user_info.html
+++ b/user/templates/user/user_info.html
@@ -14,6 +14,9 @@
                     <!--已登录，显示个人信息-->
                     <h2>{{ user.username }}</h2>
                     <ul>
+                        <li>头像：这是当前头像(待开发)
+                            <a href="#">修改头像</a>
+                        </li>
                         <li>昵称：{{ user.get_nickname }}  
                             <a href="{% url 'change_nickname' %}?from={{ request.get_full_path }}">修改昵称</a>
                         </li>
