--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -20,23 +20,42 @@
     <div class="container">
         <!--文章&&评论 8-->
         <div class="row">
-            <div class="col-xs-9">
+            <div class="col-xs-12 col-md-9">
                     <div class="row">
                         <div class="col-xs-10 col-xs-offset-1">
-                            <h3>{{ blog.title }}</h3>
-                            <ul class="blog-info-description">
-                                <li>作者：{{ blog.author }}</li>
-                                <li>分类：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
-                                <li>发表日期：{{ blog.created_time|date:"Y-m-d H:i:s" }}</li>{# 时间标签过滤器：分钟为i #}
-                                <li>阅读({{ blog.get_read_num }})</li>
-                                <li>评论({% get_comment_count blog %})</li>
-                            </ul>
-                            <div class="blog-content">{{ blog.content | safe }}</div>
-                            <div class="like" onclick="likeChange(this, '{% get_content_type blog %}', {{ blog.pk }})">
-                                <span class="glyphicon glyphicon-thumbs-up {% get_like_status blog %}"></span>
-                                <span class="liked-num">{% get_like_count blog %}</span>
-                                <span>喜欢</span>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">博文</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <h2>{{ blog.title }}</h2>
+                                    <hr>
+                                    <ul class="blog-info-description">
+                                        <li>作者：{{ blog.author }}</li>
+                                        <li>分类：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
+                                        <li>发表日期：{{ blog.created_time|date:"Y-m-d H:i:s" }}</li>{# 时间标签过滤器：分钟为i #}
+                                        <li>阅读({{ blog.get_read_num }})</li>
+                                        <li>评论({% get_comment_count blog %})</li>
+                                    </ul>
+                                    <hr>
+                                    <div class="blog-content">{{ blog.content | safe }}</div>
+                                    <hr>
+                                    <div class="like" onclick="likeChange(this, '{% get_content_type blog %}', {{ blog.pk }})">
+                                        <span class="glyphicon glyphicon-thumbs-up {% get_like_status blog %}"></span>
+                                        <span class="liked-num">{% get_like_count blog %}</span>
+                                        <span>喜欢</span>
+                                    </div>
+                                    <hr>
+                                    <p>
+                                        {% for tag in blog.blog_tag.all %}
+                                            <span class="glyphicon glyphicon-tag">{{ tag.tag_name }}</span>&nbsp;&nbsp;
+                                        {% empty %}
+                                            <span>暂无标签</span>
+                                        {% endfor %}
+                                    </p>
+                                </div>
                             </div>
+                            
                             <div class="blog-more">
                                 <p>上一篇：
                                     {% if previous_blog %}
@@ -125,8 +144,39 @@
                     </div>
             </div>
             <!--分类 3 1 -->
-            <div class="col-xs-3">
-                <li>分类：#</li>
+            <div class="hidden-xs col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">博客分类</div>
+                    <div class="panel-body">
+                        <ul class="blog-types" >
+                            {% for blog_type in blog_types %}
+                                <li>
+                                    <a href="{% url 'blogs_with_type' blog_type.pk %}">
+                                        {{ blog_type.type_name }} ({{ blog_type.blog_count }})
+                                    </a>
+                                </li>
+                            {% empty %}
+                                <li>暂无分类</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">日期归档</div>
+                    <div class="panel-body">
+                        <ul class="blog-dates">
+                            {% for blog_date, blog_count in blog_dates.items %}
+                                <li>
+                                    <a href="{% url 'blogs_with_date' blog_date.year blog_date.month %}">
+                                            {{ blog_date | date:"Y年m月" }} ({{ blog_count }})
+                                    </a>
+                                </li>
+                            {% empty %}
+                                <li>暂无分类</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         
