--- a/static/home.css
+++ b/static/home.css
@@ -42,3 +42,27 @@ div.hot-data {
 .content-item-title {
     color: #222;
 }
+
+.header-banner {
+    text-align: center;
+    min-height: 257px;
+    position: relative;
+    margin-top: -30px;
+    padding-top: 75px;
+    margin-bottom: 20px;
+    background-color: #4F5893;
+}
+
+.header-banner h1 {
+    font-size: 3em;
+    color: #fff;
+    margin-bottom: 12px;
+}
+
+.header-banner p {
+    font-weight: 300;
+    line-height: 1.4;
+    font-size: 1.5em;
+    color: #B9BFE4;
+    margin: 5px 0;
+}
