--- a/templates/home.html
+++ b/templates/home.html
@@ -14,21 +14,15 @@
 {% block nav_home_active %}active{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <!--第一行，展示页-->
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-            <!--测试：加入大屏-->
-            <div class="jumbotron">
-                <div class="center_show">
-                    <h3>这是个测试版网页，随便看</h3>
-                    <p>...</p>
-                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-                    
-                </div>
-            </div>
-        </div>
+<!--第一行，展示页-->
+<div class="header-banner">
+    <div class="container">
+        <h1>我的博客网站</h1>
+        <p>...</p>
+        <p>欢迎访问</p>
     </div>
+</div>
+<div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-3 col-sm-offset-1">
             <h3 class="home-content">欢迎访问我的网站，随便看</h3>
